add related work

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ and image modifications.
                   <div class="container 25%">
 
                     <div class="image fit captioned align-center"
-                                style="margin-bottom:0em; box-shadow:0 0">
+                                style="margin-bottom:4em; box-shadow:0 0">
                       <h1>
                         Paper
                       </h1>
@@ -121,6 +121,54 @@ enabling post-hoc interpretations of state-of-the-art networks without
 compromising their performance.
                 </p>
 							</div>
+<!-- related works !-->
+
+<div class="12u">
+  <h4>Related Work on Understanding and Disentangling Latent Representations with INNs</h4>
+</div>
+
+<div class="12u">
+  <h6>
+    <a href="https://compvis.github.io/net2net/">
+      Network-to-Network Translation with Conditional Invertible Neural Networks
+    </a>
+  </h6>
+</div>
+<div class="3u 12u$(medium)">
+  <div class="image fit align-center">
+    <a href="https://compvis.github.io/net2net/">
+      <img src="https://compvis.github.io/net2net/paper/teaser.png" style="max-width:25em; margin:auto" />
+    </a>
+  </div>
+</div>
+<div class="9u 12u$(medium)">
+  <p align="justify" style="line-height: 1.0em; font-size:0.8em">
+  Given the ever-increasing computational costs of modern machine learning models, we need to find new ways to reuse such expert models and thus tap into the resources that have been invested in their creation. Recent work suggests that the power of these massive models is captured by the representations they learn. Therefore, we seek a model that can relate between different existing representations and propose to solve this task with a conditionally invertible network. This network demonstrates its capability by (i) providing generic transfer between diverse domains, (ii) enabling controlled content synthesis by allowing modification in other domains, and (iii) facilitating diagnosis of existing representations by translating them into interpretable domains such as images. Our domain transfer network can translate between fixed representations without having to learn or finetune them. This allows users to utilize various existing domain-specific expert models from the literature that had been trained with extensive computational resources. Experiments on diverse conditional image synthesis tasks, competitive image modification results and experiments on image-to-image and text-to-image generation demonstrate the generic applicability of our approach. For example, we translate between BERT and BigGAN, state-of-the-art text and image models to provide text-to-image generation, which neither of both experts can perform on their own.
+  </p>
+</div>
+
+<div class="12u">
+  <h6>
+    <a href="https://compvis.github.io/iin/">
+      A Disentangling Invertible Interpretation Network for Explaining Latent Representations
+    </a>
+  </h6>
+</div>
+<div class="3u 12u$(medium)">
+  <div class="image fit align-center">
+    <a href="https://compvis.github.io/iin/">
+      <img src="https://compvis.github.io/iin/images/overview.jpg" style="max-width:25em; margin:auto" />
+    </a>
+  </div>
+</div>
+<div class="9u 12u$(medium)">
+  <p align="justify" style="line-height: 1.0em; font-size:0.8em">
+  Neural networks have greatly boosted performance in computer vision by learning powerful representations of input data. The drawback of end-to-end training for maximal overall performance are black-box models whose hidden representations are lacking interpretability: Since distributed coding is optimal for latent layers to improve their robustness, attributing meaning to parts of a hidden feature vector or to individual neurons is hindered. We formulate interpretation as a translation of hidden representations onto semantic concepts that are comprehensible to the user. The mapping between both domains has to be bijective so that semantic modifications in the target domain correctly alter the original representation. The proposed invertible interpretation network can be transparently applied on top of existing architectures with no need to modify or retrain them. Consequently, we translate an original representation to an equivalent yet interpretable one and backwards without affecting the expressiveness and performance of the original. The invertible interpretation network disentangles the hidden representation into separate, semantically meaningful concepts. Moreover, we present an efficient approach to define semantic concepts by only sketching two images and also an unsupervised strategy. Experimental evaluation demonstrates the wide applicability to interpretation of existing classification and image generation networks as well as to semantically guided image manipulation.
+  </p>
+</div>
+
+
+<!-- /related works !-->
 						</div>
 					</div>
 				</section>
